--- a/Frontend/src/components/LandingMobile/LandingMobile.css
+++ b/Frontend/src/components/LandingMobile/LandingMobile.css
@@ -9,23 +9,22 @@
   width: 100%;
 }
 
-.banner-1 {
+.banner_mobile {
   align-items: flex-end;
-  background-color: var(--white);
+  background-color: var(--cerise);
   display: flex;
   flex: 1;
-  justify-content: flex-end;
+  justify-content: center;
   max-height: 60px;
   min-width: 100%;
   padding: 12px 10px;
 }
 
-.banner_-text-1 {
-  color: var(--black);
+.banner_-text_mobile {
+  color: var(--white);
   font-family: var(--font-family-montserrat);
   font-size: var(--font-size-l);
   font-weight: 500;
-  letter-spacing: 0;
   line-height: 20px;
   min-height: 26px;
   min-width: 338px;
@@ -33,101 +32,42 @@
   white-space: nowrap;
 }
 
-.image {
+.image_mobile {
   align-items: flex-start;
-  display: flex;
-  flex: 1;
-  margin-left: -22.0px;
-  margin-right: -34.0px;
-  max-height: 694px;
-  min-width: calc(100.00% + 56px);
-}
-
-.overlap-group-1 {
-  height: 694px;
-  position: relative;
-  width: 416px;
-}
-
-.background_-image-1 {
-  background-color: var(--water-leaf);
-  height: 694px;
-  left: 22px;
-  position: absolute;
-  top: 0;
-  width: 360px;
-}
-
-.heart {
-  height: 381px;
-  left: 0;
-  object-fit: cover;
-  position: absolute;
-  top: 58px;
-  width: 416px;
-}
-
-.logo-1 {
-  height: 381px;
-  left: 9px;
-  object-fit: cover;
-  position: absolute;
-  top: 58px;
-  width: 381px;
-}
-
-.reclaimingculture {
-  color: var(--cerise);
-  font-family: var(--font-family-montserrat);
-  font-size: var(--font-size-xxxxl);
-  font-weight: 300;
-  left: 44px;
-  letter-spacing: 3.75px;
-  line-height: 50px;
-  position: absolute;
-  text-align: center;
-  top: 469px;
-  white-space: nowrap;
-}
-
-.about-1 {
-  align-items: flex-end;
-  background-color: var(--firefly);
-  display: flex;
-  height: 360px;
-  justify-content: flex-end;
-  min-width: 360px;
-  padding: 158px 91px;
-}
-
-.about_-text-1 {
-  letter-spacing: 0;
-  line-height: 28px;
-  min-height: 36px;
-  min-width: 176px;
-  text-align: center;
-  white-space: nowrap;
-}
-
-.about-text-1 {
-  align-items: flex-start;
-  align-self: flex-end;
+  justify-content: center;
   background-color: var(--white);
   display: flex;
-  flex-direction: column;
-  min-height: 360px;
-  padding: 92.1px 33.7px;
-  width: 360px;
+  flex: 1;
+  margin-left: 0;
+  margin-right: 0;
+  max-height: 694px;
+  min-width: 100%;
+  padding: 129px 0;
 }
 
-.about_-icon-1 {
+.logo_mobile {
+  height: 360px;
+  width: 380px;
+}
+
+.about_mobile {
+  align-items: flex-start;
+  justify-content: center;
+  background-color: var(--firefly);
+  display: flex;
+  flex: 1;
+  max-height: 360px;
+  min-width: 100%;
+  padding: 52.1px 35.7px;
+}
+
+.about_-icon_mobile {
   display: flex;
   height: 10px;
-  margin-left: 2.0px;
   width: 50px;
 }
 
-.ebene-1-2 {
+.ebene-1_mobile {
   align-items: flex-start;
   display: flex;
   flex: 1;
@@ -135,114 +75,47 @@
   min-width: 50.12px;
 }
 
-.pfad-container-1 {
+.pfad-container_mobile {
   height: 12px;
   margin-top: -1.0px;
   position: relative;
   width: 52px;
 }
 
-.pfad-5-1 {
+.pfad-5_mobile {
   height: 11px;
   left: 0;
   object-fit: cover;
   position: absolute;
   top: 0;
-  width: 21px;
 }
 
-.pfad-6-1 {
-  height: 11px;
-  left: 11px;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 20px;
-}
-
-.pfad-7-1 {
-  height: 11px;
-  left: 20px;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 21px;
-}
-
-.pfad-8-1 {
-  height: 11px;
-  left: 31px;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  width: 20px;
-}
-
-.about-text_-text-1 {
-  align-self: flex-end;
-  height: 137px;
-  letter-spacing: 0;
-  line-height: 15px;
-  margin-top: 11px;
-  width: 291px;
-}
-
-.project-1 {
-  align-items: center;
-  align-self: flex-end;
-  background-color: var(--cerise);
-  display: flex;
-  height: 360px;
-  margin-right: 0;
-  min-width: 360px;
-  padding: 158px 0;
-}
-
-.project_-icon-1 {
-  display: flex;
-  height: 24px;
-  margin-left: -12px;
-  margin-top: 2.84px;
-  transform: rotate(90deg);
-  width: 49px;
-}
-
-.ebene-1-3 {
-  display: flex;
-  flex: 1;
-  width: 48.96px;
-}
-
-.pfad-4-1 {
-  flex: 1;
-  margin-bottom: -13.2px;
-  margin-left: 11.3px;
-  margin-right: 11.3px;
-  margin-top: -12.7px;
-  object-fit: cover;
-  transform: rotate(-90deg);
-  width: 26.31px;
-}
-
-.project_-text-1 {
-  align-self: flex-end;
+.about_-text_mobile {
+  align-self: center;
+  position:absolute;
   letter-spacing: 0;
   line-height: 28px;
-  margin-left: 60px;
+  margin-top: 8.0px;
   min-height: 36px;
-  min-width: 166px;
+  min-width: 176px;
   text-align: center;
   white-space: nowrap;
 }
 
-.project-text-1 {
+.about-text_mobile {
+  align-items: center;
   background-color: var(--water-leaf);
   display: flex;
-  height: 360px;
-  width: 360px;
+  flex: 1;
+  justify-content: center;
+  max-height: 360px;
+  min-width: 100%;
+  padding: 110.4px 33.7px;
 }
 
-.project-text_-text-1 {
+.about-text_-text_mobile {
+  align-self: center;
+  justify-self: center;
   flex: 1;
   letter-spacing: 0;
   line-height: 15px;
@@ -253,7 +126,75 @@
   width: 289px;
 }
 
-.cta-1 {
+.project_mobile {
+  align-items: center;
+  justify-content: center;
+  background-color: var(--cerise);
+  display: flex;
+  flex: 1;
+  max-height: 360px;
+  min-width: 100%;
+  padding: 158px 0;
+}
+
+.project_-icon_mobile {
+  display: flex;
+  height: 24px;
+  margin-left: -12px;
+  margin-top: 2.84px;
+  transform: rotate(90deg);
+  width: 49px;
+}
+
+.ebene-1-1_mobile {
+  display: flex;
+  flex: 1;
+  width: 48.96px;
+}
+
+.pfad-4_mobile {
+  flex: 1;
+  margin-bottom: -13.2px;
+  margin-left: 11.3px;
+  margin-right: 11.3px;
+  margin-top: -12.7px;
+  object-fit: cover;
+  transform: rotate(-90deg);
+  width: 26.31px;
+}
+
+.project_-text_mobile {
+  align-self: flex-end;
+  position: absolute;
+  letter-spacing: 0;
+  line-height: 28px;
+  min-height: 36px;
+  min-width: 166px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.project-text_mobile {
+  background-color: var(--water-leaf);
+  display: flex;
+  flex: 1;
+  max-height: 360px;
+}
+
+.project-text_-text_mobile {
+  align-self: center;
+  justify-self: center;
+  flex: 1;
+  letter-spacing: 0;
+  line-height: 15px;
+  margin-bottom: 72px;
+  margin-left: 37px;
+  margin-right: 34px;
+  margin-top: 75px;
+  width: 289px;
+}
+
+.cta_mobile {
   align-items: center;
   background-color: var(--white);
   display: flex;
@@ -264,8 +205,8 @@
   padding: 35px 47px;
 }
 
-.cta_-text1-1 {
-  align-self: flex-end;
+.cta_-text1_mobile {
+  align-self: center;
   letter-spacing: 0;
   line-height: 15px;
   min-height: 40px;
@@ -274,7 +215,7 @@
   white-space: nowrap;
 }
 
-.cta_-button-1 {
+.cta_-button_mobile {
   background-color: var(--cerise);
   display: flex;
   height: 39px;
@@ -283,7 +224,7 @@
   width: 89px;
 }
 
-.cta_-button_-text-1 {
+.cta_-button_-text_mobile {
   color: var(--water-leaf);
   flex: 1;
   font-family: var(--font-family-montserrat);
@@ -299,7 +240,7 @@
   width: 71px;
 }
 
-.cta_-container-1 {
+.cta_-container_mobile {
   align-items: flex-start;
   display: flex;
   height: 13px;
@@ -308,7 +249,7 @@
   min-width: 206px;
 }
 
-.cta_-text2-1 {
+.cta_-text2_mobile {
   letter-spacing: 0;
   line-height: 9px;
   min-height: 13px;
@@ -316,7 +257,7 @@
   white-space: nowrap;
 }
 
-.cta_mail-1 {
+.cta_mail_mobile {
   letter-spacing: 0;
   line-height: 9px;
   margin-left: 4px;
