--- a/Frontend/src/globals.css
+++ b/Frontend/src/globals.css
@@ -20,6 +20,14 @@
   pointer-events: auto;
 }
 
+.align-self-flex-center {
+  align-self: flex-center;
+}
+
+input:focus {
+  outline: none;
+}
+
 * {
   box-sizing: border-box;
 }
