--- a/Frontend/src/styleguide.css
+++ b/Frontend/src/styleguide.css
@@ -117,3 +117,35 @@
 .border-1px-dove-gray {
   border: 1px solid var(--dove-gray);
 }
+
+.montserrat-medium-black-25px {
+  color: var(--black);
+  font-family: var(--font-family-montserrat);
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.montserrat-semi-bold-black-50px {
+  color: var(--black);
+  font-family: var(--font-family-montserrat);
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.montserrat-normal-black-30px {
+  color: var(--black);
+  font-family: var(--font-family-montserrat);
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.montserrat-medium-black-20px {
+  color: var(--black);
+  font-family: var(--font-family-montserrat);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+}
