--- a/Frontend/src/components/EventDetails/EventDetails.css
+++ b/Frontend/src/components/EventDetails/EventDetails.css
@@ -3,7 +3,6 @@
   background-color: var(--gallery);
   display: flex;
   flex-direction: column;
-  height: 1200px;
   position: relative;
   width: 1280px;
 }
@@ -188,10 +187,9 @@
 }
 
 .lineup-panel2 {
-  align-items: flex-end;
   background-color: var(--white);
   display: flex;
-  height: 70px;
+  min-height: 50px;
   margin-top: 40px;
   width: 1016px;
 }
@@ -200,25 +198,26 @@
   height: 32px;
   letter-spacing: 0;
   line-height: 25px;
-  margin-bottom: 13px;
   margin-left: 20px;
+  margin-top: 20px;
   white-space: nowrap;
   width: 96px;
 }
 
 .lineup-panel_-text2 {
-  height: 32px;
+  flex: 1;
   letter-spacing: 0;
   line-height: 25px;
-  margin-bottom: 13px;
+  margin-bottom: 18px;
   margin-left: 18px;
-  width: 448px;
+  margin-right: 18px;
+  margin-top: 20px;
 }
 
 .information-panel2 {
   background-color: var(--white);
   display: flex;
-  height: 100px;
+  min-height: 50px;
   margin-top: 40px;
   width: 1016px;
 }
@@ -247,6 +246,7 @@
   align-items: flex-start;
   display: flex;
   margin-top: 40px;
+  margin-bottom: 40px;
   min-width: 1016px;
 }
 
