--- a/Frontend/src/components/Gruppe5/Gruppe5.css
+++ b/Frontend/src/components/Gruppe5/Gruppe5.css
@@ -3,14 +3,14 @@
   background-color: var(--white);
   display: flex;
   min-width: 1017px;
+  margin-bottom: 10px;
 }
 
 .event_-picture {
   height: 200px;
-  margin-left: -1px;
-  margin-top: -1px;
+  margin-right: 10px;
   object-fit: cover;
-  width: 284px;
+  width: 200px;
 }
 
 .flex-col {
@@ -100,7 +100,7 @@
   background-color: var(--water-leaf);
   display: flex;
   height: 200px;
-  margin-left: 78px;
+  margin-left: 178px;
   min-width: 200px;
   padding: 32.5px 60px;
 }
