--- a/Frontend/src/components/ChainBanner/ChainBanner.css
+++ b/Frontend/src/components/ChainBanner/ChainBanner.css
@@ -4,9 +4,9 @@
   background-color: var(--water-leaf);
   display: flex;
   height: 60px;
-  justify-content: flex-end;
-  min-width: 1280px;
-  padding: 7px 242px;
+  justify-content: center;
+  width: 100%;
+  padding: 7px;
 }
 
 .chain-banner_-text,
@@ -14,7 +14,6 @@
   letter-spacing: 0;
   line-height: 25px;
   min-height: 35px;
-  min-width: 794px;
   text-align: center;
   white-space: nowrap;
 }
