--- a/Frontend/src/components/EventDetails/EventDetails.css
+++ b/Frontend/src/components/EventDetails/EventDetails.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 1280px;
+  width: 100%;
 }
 
 .details_-titel {
@@ -61,6 +61,7 @@
   letter-spacing: 0;
   line-height: 25px;
   margin-left: 17px;
+  margin-right: 100px;
   min-height: 32px;
   white-space: nowrap;
 }
@@ -212,6 +213,7 @@
   margin-left: 18px;
   margin-right: 18px;
   margin-top: 20px;
+  word-break: break-word;
 }
 
 .information-panel2 {
@@ -240,6 +242,7 @@
   margin-left: 18px;
   margin-right: 18px;
   margin-top: 20px;
+  word-break: break-word;
 }
 
 .buy-ticket-panel {
