--- a/Frontend/src/styleguide.css
+++ b/Frontend/src/styleguide.css
@@ -160,3 +160,19 @@
   font-style: normal;
   font-weight: 500;
 }
+
+.montserrat-medium-tower-gray-30px {
+  color: var(--tower-gray);
+  font-family: var(--font-family-montserrat);
+  font-size: 30px;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.montserrat-medium-tower-gray-15px {
+  color: var(--tower-gray);
+  font-family: var(--font-family-montserrat);
+  font-size: 15px;
+  font-weight: 500;
+  font-style: normal;
+}
