--- a/Frontend/src/components/EventDetails/EventDetails.css
+++ b/Frontend/src/components/EventDetails/EventDetails.css
@@ -265,10 +265,11 @@
   display: flex;
   height: 60px;
   left: 0;
-  min-width: 1016px;
+  width: 1016px;
   padding: 6.5px 175px;
   position: absolute;
   top: 109px;
+  cursor: pointer;
 }
 
 .buyticket_-text {
@@ -384,7 +385,7 @@
   height: 134px;
   width: 1017px;
   margin-top: 30px;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 .make-comments_-textfield {
@@ -404,6 +405,9 @@
 
 .make-comments_-textfield::placeholder {
   color: #a9bcc699;
+}
+textarea:focus {
+  outline: none;
 }
 
 .make-comments {
@@ -427,6 +431,7 @@
   margin-top: 22px;
   white-space: nowrap;
   width: 47px;
+  cursor: pointer;
 }
 
 .comment {
@@ -481,9 +486,9 @@
 }
 
 .comment-2 {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
-  height: 60px;
+  min-height: 60px;
   min-width: 984px;
 }
 
@@ -513,10 +518,12 @@
 
 .comment_-text-1 {
   align-self: flex-end;
-  height: 62px;
+  min-height: 62px;
   letter-spacing: 0;
   line-height: 25px;
   margin-bottom: -2px;
   margin-left: 18px;
   width: 842px;
+  margin-bottom: 60px;
+  word-break: break-word;
 }
