--- a/Frontend/src/components/Selection/Selection.css
+++ b/Frontend/src/components/Selection/Selection.css
@@ -46,16 +46,17 @@
   width: 126px;
 }
 
-.place {
+.place2 {
   flex: 1;
   letter-spacing: 0;
   line-height: 30px;
-  margin-bottom: 14.5px;
+  margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 18px;
   margin-top: 23.5px;
   text-align: center;
   white-space: nowrap;
+  
   width: 88px;
 }
 
@@ -91,7 +92,7 @@
   flex: 1;
   letter-spacing: 0;
   line-height: 30px;
-  margin-bottom: 14.5px;
+  margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 18px;
   margin-top: 23.5px;
