No Home && Add Token && Better Connect

--- a/Frontend/src/components/ChainBanner/ChainBanner.css
+++ b/Frontend/src/components/ChainBanner/ChainBanner.css
@@ -1,5 +1,6 @@
 .chain-banner,
 .details-banner {
+  cursor: pointer;
   align-items: flex-end;
   background-color: var(--water-leaf);
   display: flex;
