--- a/Frontend/src/components/Selection/Selection.css
+++ b/Frontend/src/components/Selection/Selection.css
@@ -104,3 +104,27 @@
 .info_text {
   margin-top: 20px;
 }
+
+.infoModal {
+  background-color: white;
+  width: 800px;
+  padding: 20px;
+}
+.infoModalTitel {
+  letter-spacing: 0;
+  line-height: 30px;
+  margin-left: 8px;
+  min-height: 39px;
+  white-space: nowrap;
+}
+
+.infoModalText {
+  flex: 1;
+  letter-spacing: 0;
+  line-height: 25px;
+  margin-bottom: 18px;
+  margin-left: 18px;
+  margin-right: 18px;
+  margin-top: 20px;
+  word-break: break-word;
+}
