Profile Basic Structure

--- a/Frontend/src/components/ChainBanner/ChainBanner.css
+++ b/Frontend/src/components/ChainBanner/ChainBanner.css
@@ -2,12 +2,24 @@
 .details-banner {
   cursor: pointer;
   align-items: flex-end;
+  background-color: var(--cerise);
+  display: flex;
+  height: 60px;
+  width: 50%;
+  padding: 7px;
+  justify-content: center;
+}
+
+.chain-banner2,
+.details-banner2 {
+  cursor: pointer;
+  align-items: flex-end;
   background-color: var(--water-leaf);
   display: flex;
   height: 60px;
-  justify-content: center;
-  width: 100%;
+  width: 50%;
   padding: 7px;
+  justify-content: center;
 }
 
 .chain-banner_-text,
@@ -15,7 +27,17 @@
   letter-spacing: 0;
   line-height: 25px;
   min-height: 35px;
+  text-align: left;
+  white-space: nowrap;
+}
+
+.chain-banner_-text2,
+.details-banner_-text2 {
+  letter-spacing: 0;
+  line-height: 25px;
+  min-height: 35px;
   text-align: center;
   white-space: nowrap;
 }
+
 
