--- a/Frontend/src/components/ProfileDetailsEdit/EventDetails.css
+++ b/Frontend/src/components/ProfileDetailsEdit/EventDetails.css
@@ -538,25 +538,26 @@ textarea:focus {
 
 
 
-.profileBanner {
+.profileBannerEdit {
   width: 100%;
 }
 
 
-.profile-picture {
+.profile-pictureEdit {
   width: 300px;
 }
 
-.profilecontainer {
+.profilecontainerEdit {
   margin-top: 100px;
   text-align: center;
 }
 
-.nickname {
+.nicknameEdit {
   text-align: center;
+  width: 600px;
 }
 
-.submitNickname {
+.submitNicknameEdit {
   text-align: center;
   margin-left: 5px;
   cursor: pointer;;
@@ -567,28 +568,28 @@ textarea:focus {
   line-height: 40px;
 }
 
-.nickSpace {
+.nickSpaceEdit {
   margin-top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.storyContainer {
+.storyContainerEdit {
   justify-content: center;
   display: flex;
   width: 100%;
 }
 
-.story-panel2 {
+.story-panel2Edit {
   background-color: var(--white);
   min-height: 50px;
   margin-top: 40px;
-  width: 620px;
+  width: 600px;
   text-align: center;
 }
 
-.story-panel_-titel2 {
+.story-panel_-titel2Edit {
   height: 32px;
   letter-spacing: 0;
   line-height: 25px;
@@ -596,23 +597,27 @@ textarea:focus {
   white-space: nowrap;
 }
 
-.story-panel_-text2 {
+.story-panel_-text2Edit {
   text-align: left;
   flex: 1;
   letter-spacing: 0;
-  margin-bottom: 10px;
-  margin-top: 25px;
-  margin-right: 15px;
-  margin-left: 20px;
+  line-height: 25px;
+  margin-bottom: 18px;
+  margin-top: 20px;
   word-break: break-word;
-  min-height: 150px;
+  border: none;
+  resize: none;
+  overflow: hidden;
+  width: 550px;
+  min-height: 200px;
 }
 
-.submitProfile {
+.submitProfileEdit {
   background-color: var(--cerise);
   width: 200px;
   height: 60px;
   text-align: center;
   padding-top: 19px;
   margin-top: 40px;
+  cursor: pointer;
 }
