--- a/Frontend/src/styleguide.css
+++ b/Frontend/src/styleguide.css
@@ -200,3 +200,11 @@
   font-style: normal;
   font-weight: 500;
 }
+
+.montserrat-medium-cerise-20px {
+  color: var(--cerise);
+  font-family: var(--font-family-montserrat);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+}
