--- a/Frontend/src/styleguide.css
+++ b/Frontend/src/styleguide.css
@@ -208,3 +208,11 @@
   font-style: normal;
   font-weight: 500;
 }
+
+.montserrat-medium-cerise-30px {
+  color: var(--cerise);
+  font-family: var(--font-family-montserrat);
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+}
